--- a/index.html
+++ b/index.html
@@ -1,18 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8" />
+  <title>Email Validation</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f8f8;
+      color: #333;
+    }
+
+    .container {
+      max-width: 400px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 5px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    label {
+      display: block;
+      margin-bottom: 10px;
+    }
+
+    input[type="email"] {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    input.error {
+      border-color: red;
+    }
+
+    input.success {
+      border-color: green;
+    }
+
+    .submit-btn {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      background-color: #ccc;
+      border: none;
+      border-radius: 4px;
+      color: #fff;
+      cursor: not-allowed;
+    }
+
+    .submit-btn.enabled {
+      background-color: #007bff;
+      cursor: pointer;
+    }
+
+    .result {
+      margin-top: 10px;
+      font-weight: bold;
+    }
+  </style>
 </head>
-
 <body>
-  <form>
-    <lable for="email">电子邮箱:</lable>
-    <input type="email" id="email" />
-    <button id="submit">提交</button>
-    <p id="uid"></p>
-  </form>
+  <div class="container">
+    <label for="email">Email:</label>
+    <input type="email" id="email" placeholder="Enter your email">
+    <button class="submit-btn" disabled>Submit</button>
+    <div class="result" id="result"></div>
+  </div>
+
+  <script>
+    const emailInput = document.getElementById('email');
+    const submitBtn = document.querySelector('.submit-btn');
+    const resultDiv = document.getElementById('result');
+
+    emailInput.addEventListener('input', function () {
+      const email = emailInput.value.trim();
+      const regex = /^[A-Za-z0-9._%+-]+@(connect\.)?hku\.hk$/;
+
+      if (regex.test(email)) {
+        emailInput.classList.remove('error');
+        emailInput.classList.add('success');
+        submitBtn.classList.add('enabled');
+        submitBtn.disabled = false;
+      } else {
+        emailInput.classList.remove('success');
+        emailInput.classList.add('error');
+        submitBtn.classList.remove('enabled');
+        submitBtn.disabled = true;
+      }
+    });
+
+    submitBtn.addEventListener('click', function () {
+      const email = emailInput.value.trim();
+      const uid = email.split('@')[0];
+      resultDiv.textContent = uid;
+    });
+  </script>
 </body>
-
 </html>
-
