--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Email Validation</title>
+  <title>I Love Pootal</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -11,11 +11,11 @@
 
     .container {
       max-width: 400px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      margin: auto ;
+      padding: 50px;
+      background: linear-gradient( #ff93ac,#ffcce6); 
+      border-radius: 120px;
+
     }
 
     label {
@@ -56,9 +56,10 @@
     }
 
     .result {
-      margin-top: 10px;
+      margin-top: 15px;
       font-weight: bold;
     }
+    
   </style>
 </head>
 <body>
