--- a/Problem3/index.html
+++ b/Problem3/index.html
@@ -65,7 +65,7 @@
     @media (prefers-color-scheme: dark) {
     body { background: #333; color: white;
       .container {
-    filter: brightness(0.85); /* 看起来舒服点，突发奇想就加了个hhh*/
+    filter: brightness(0.85); /* 让内容不那么刺眼，减少不适 */
   }
   }
     }
